--- a/templates/admin/sidebar.html.twig
+++ b/templates/admin/sidebar.html.twig
@@ -8,7 +8,7 @@
             <div class="sidebar-brand-icon rotate-n-15">
                 <i class="fas fa-hotel"></i>
             </div>
-            <div class="sidebar-brand-text mx-3">Real Houses</div>
+            <div class="sidebar-brand-text mx-3">Homepage</div>
         </a>
 
         <!-- Divider -->
@@ -19,12 +19,6 @@
             <a class="nav-link" href="/admin">
                 <i class="fas fa-fw fa-tachometer-alt"></i>
                 <span>Dashboard</span></a>
-        </li>
-
-        <li class="nav-item active">
-            <a class="nav-link" href="/admin/general">
-                <i class="fas fa-fw fa-user-cog"></i>
-                <span>General</span></a>
         </li>
 
         <li class="nav-item active">
